--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="fullPage">
   <app-header></app-header>
 
-  <app-loginForm></app-loginForm>
+  <app-login-form></app-login-form>
 
   <app-footer></app-footer>
 </div>
