--- a/src/app/login-form/login-form.component.css
+++ b/src/app/login-form/login-form.component.css
@@ -1,4 +1,3 @@
-# Host targets loginform
 :host {
   flew-grow: 1;
   display: flex;
@@ -6,7 +5,7 @@
   align-items: center;
 }
 
-div.iput {
+div.input {
   position: relative;
 }
 
