--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form = (submit) = "loginUser($event)">
+<form (submit)="loginUser($event)">
   <div class="input">
     <label>Username</label>
     <input type="text">
